--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import "./variables";
 
 html {
   height: 100%;
@@ -10,8 +10,11 @@ body {
   height: 100%;
   background-color: #626373;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), #141414);
-  background: $black;
   color: $white;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 /* =============================================
