--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -8,8 +8,7 @@ body {
   display: flex;
   justify-content: center;
   height: 100%;
-  background-color: #626373;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), #141414);
+  background-color: $black;
   color: $white;
 
   -webkit-font-smoothing: antialiased;
